# AndroidNativeApp

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
ndkports/: gradle.properties  settings.gradle.kts
ndkports/EnTT/: build.gradle.kts
ndkports/Microsoft.GSL/: build.gradle.kts
ndkports/assimp/: build.gradle.kts
ndkports/glm/: build.gradle.kts
ndkports/imgui/: build.gradle.kts
ndkports/spdlog/: build.gradle.kts
ndkports/stb/: build.gradle.kts
